# kiki-lite

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  ENTERPRISE_GUIDE.md  Makefile  README.md  REFACTOR_PLAN.md  docker-compose.dev.yml  pyproject.toml
app/: __init__.py  main.py
app/agent/: __init__.py  agent.py  context.py  factory.py  memory.py  message_utils.py  schemas.py  state.py  tools.py  workflow.py
app/agent/callbacks/: __init__.py  handler.py  metrics.py
app/agent/graph/: __init__.py  builder.py  cache.py  interrupt.py  nodes.py  react.py  types.py  utils.py
app/agent/memory/: __init__.py  base.py  context.py  long_term.py  manager.py  short_term.py  store.py  window.py
app/agent/prompts/: __init__.py  chat.py  router.py  supervisor.py  template.py
app/agent/retry/: __init__.py
app/agent/streaming/: __init__.py  base.py  cancellation.py  continuation.py  service.py
app/agent/tools/: README.md  __init__.py  decorators.py  interceptor.py  mcp.py  registry.py  search_postprocessor.py
app/agent/tools/builtin/: __init__.py  academic.py  calculation.py  crawl.py  data_analysis.py  data_schema.py  database.py  database_query.py  python_repl.py  search.py  tavily_search.py  weather.py  web_fetch.py
app/api/: dependencies.py
app/api/v1/: __init__.py  agents.py  api_keys.py  auth.py  chat.py  initialization.py  mcp_services.py  messages.py  models.py  sessions.py  system.py  tenant_config.py  tenants.py
app/auth/: __init__.py  api_key.py  jwt.py  tenant.py  tenant_api_key.py
app/config/: __init__.py  dependencies.py  errors.py  runtime.py  settings.py
app/infra/: __init__.py  cache.py  database.py  redis.py  search.py  storage.py
app/llm/: __init__.py  cost_tracker.py  embeddings.py  providers.py  registry.py  service.py
app/middleware/: __init__.py  auth.py  observability.py  security.py
app/models/: __init__.py  api_key.py  auth_token.py  custom_agent.py  database.py  mcp_service.py  memory.py  message.py  placeholder.py  session.py  tenant.py  thread.py  user.py
app/observability/: __init__.py  log_sanitizer.py  logging.py  metrics.py
app/repositories/: __init__.py  agent_async.py  api_key.py  base.py  mcp_service.py  memory.py  message.py  model.py  placeholder.py  session.py  tag.py  tenant.py  thread.py  user.py
app/schemas/: __init__.py  agent.py  auth.py  chat.py  evaluation.py  initialization.py  mcp_service.py  message.py  model.py  response.py  session.py  system.py  tenant.py  tool.py
app/services/: __init__.py
app/services/agent/: agent_clone.py  api_key_management_service.py  mcp_service.py  tool_service.py
app/services/core/: auth.py  session.py  session_service.py  session_state.py  system_service.py  tenant.py
app/services/llm/: model_service.py  ollama.py  reranker.py
app/services/shared/: message_service.py  placeholder_service.py
app/utils/: template.py
config/: alertmanager.yml  prometheus.yml
config/alerts/: kiki_alerts.yml
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: prometheus.yml
config/logstash/: logstash.conf
config/nginx/: nginx.conf
config/prometheus/: prometheus.yml
docs/: AGENT.md  API.md  API_ALIGNMENT_TODO.md  APP_STRUCTURE.md  ARCHITECTURE.md  DEVELOPMENT.md  EVENTBUS.md  KNOWLEDGE_MODEL_API.md  KNOWLEDGE_MODEL_API_DETAILED.md  LANGGRAPH_EVENTS.md  LANGGRAPH_RATE_LIMIT.md  MONOREPO_ARCHITECTURE.md  MULTI_AGENT_EXAMPLES.md  OBSERVABILITY_GUIDE.md  README.md  ROADMAP.md  SESSION_MESSAGE_REFACTOR.md  WEKNORA_COMPARISON.md  api-testing.md
grafana/dashboards/: kiki-dashboard.json
mcp-server/: .gitignore  MCP_CONFIG.md  README.md  __init__.py  kiki_mcp_server.py  pyproject.toml  run_server.py  test_mcp_server.py
migrations/: 001_init_schema.rollback.sql  001_init_schema.sql  002_init_agents.rollback.sql  002_init_agents.sql  003_update_threads_and_executions.rollback.sql  003_update_threads_and_executions.sql  004_convert_json_to_jsonb.rollback.sql  004_convert_json_to_jsonb.sql  005_add_tenant_and_session_message_fields.rollback.sql  005_add_tenant_and_session_message_fields.sql  006_add_mcp_services.rollback.sql  006_add_mcp_services.sql  007_drop_tools_tables.rollback.sql  007_drop_tools_tables.sql  008_add_api_keys.rollback.sql  008_add_api_keys.sql
scripts/: docker-entrypoint.sh  init_test_data.py  public.sql  rebuild_db.sh  test_bind_tools_fix.py  test_langsmith_trace.py
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_agent_workflow.py  test_full_user_journey.py
tests/integration/: test_agents_api.py  test_api.py  test_multi_agent_e2e.py  test_tools_api.py
tests/unit/: __init__.py  test_agent_factory.py  test_agent_state.py  test_auth_api.py  test_checkpoint.py  test_config.py  test_database_service.py  test_evaluation.py  test_langgraph_agent.py  test_limiter.py  test_llm.py  test_llm_providers.py  test_memory.py  test_metrics.py  test_middleware.py  test_multi_agent.py  test_redis.py  test_repositories.py  test_schemas.py  test_state_manager.py  test_tool_registry.py
