[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiki-mcp-server"
version = "1.0.0"
description = "Kiki MCP Server - Model Context Protocol server for Kiki Agent Framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kiki Team"}
]
keywords = ["mcp", "model-context-protocol", "kiki", "agent-framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/kiki"
Repository = "https://github.com/your-org/kiki"

[project.scripts]
kiki-mcp-server = "run_server:main"

[tool.setuptools]
py-modules = ["kiki_mcp_server", "run_server"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
